# rnaseq-toolkit

./: CITATION.cff  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
paper/: paper.md
results/: benchmark.py
src/rnaseq_toolkit/: __init__.py  cli.py  dea.py  enrichment.py  normalization.py  pipeline.py  report.py  visualization.py
tests/: conftest.py  test_normalization.py  test_pipeline.py  test_visualization.py
workflow/: Snakefile  config.yaml
